--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,9 @@ services:
     image: postgres:16
     container_name: KiriBlog-postgres
     ports:
-      - "5432:5432"
+      # Solución al error: Exponemos el puerto 5433 hacia tu Windows/Mac
+      # Internamente en Docker, sigue usando el 5432
+      - "15432:5432"
     environment:
       POSTGRES_DB: KiriBlog_dev
       POSTGRES_USER: postgres
@@ -13,7 +15,19 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
+  api:
+    build: 
+      context: .
+      dockerfile: Api/Dockerfile
+    container_name: KiriBlog-api
+    ports:
+      - "8090:8080"
+    environment:
+      # La API se conecta al contenedor "postgres" por la red interna usando el puerto 5432
+      - ConnectionStrings__DefaultConnection=Host=postgres;Port=5432;Database=KiriBlog_dev;Username=postgres;Password=postgres
+      - ASPNETCORE_ENVIRONMENT=Development
+    depends_on:
+      - postgres
+
 volumes:
   postgres_data:
-  #run: docker-compose up
-  
